# google-sheets-parser

./: .dockerignore  .gitignore  DATE_PARSING.md  DEPLOYMENT.md  Dockerfile  Makefile  README.md  deploy.sh  docker-compose.yml  env.example  example_client.py  parser.py  pyproject.toml  requirements.txt  run.py
app/: __init__.py  auth.py  main.py  models.py  parser.py
